# app/controllers/api/v1/users_controller.rb
@@ -8,13 +8,35 @@ module Api
       end
 
       def show
-        render json: user.secure_attributes
+        if current_resource_owner&.id.to_s == params[:id].to_s
+          render json: user.attributes
+        else
+          render json: user.secure_attributes
+        end
+      end
+
+      def update
+        if current_resource_owner.id.to_s != params[:id].to_s
+          render json: { error: 'Forbidden' }, status: :forbidden
+          return
+        end
+
+        begin
+          updated_user = user_factory.update(params[:id], user_params)
+          render json: updated_user.secure_attributes
+        rescue ActiveRecord::RecordInvalid => e
+          render json: { errors: e.record.errors }, status: :unprocessable_entity
+        end
       end
 
       private
 
       def user
         @user ||= user_factory.find(params[:id])
+      end
+
+      def user_params
+        params.require(:user).permit(:email, :password, :firstname, :lastname)
       end
 
       def user_factory
